<resources>
    <string name="app_name">Group_Project_Organizer</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="km">Km</string>
    <string name="add">Add</string>
    <string name="litars">Litars</string>
    <string name="dialog_message"> All fildes are required. To exit activity press Cancel.</string>
    <string name="ok">OK</string>
    <string name="dialog_title">Error</string>
    <string name="cancel">Cancel</string>
</resources>
