<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <TextView
        android:id="@+id/t_d"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/date" />
    <TextView
        android:id="@+id/t_l"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/litars"
        android:layout_toEndOf="@+id/t_d"
        android:gravity="center"/>
    <TextView
        android:id="@+id/t_p"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/price"
        android:layout_toEndOf="@+id/t_l"
        android:gravity="center"/>
    <TextView
        android:id="@+id/t_km"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/km"
        android:layout_toEndOf="@+id/t_p"
        android:gravity="center"/>
</RelativeLayout>